@@ -1,1 +1,4 @@
 -Xmx1400m
+--add-opens java.base/java.lang=ALL-UNNAMED
+--add-opens java.base/java.io=ALL-UNNAMED
+--add-opens java.base/java.util=ALL-UNNAMED
